; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread_call.c_thread_call_free.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread_call.c_thread_call_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i64, i64, i64, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32* }

@THREAD_CALL_RESCHEDULE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Refcount negative: %d\0A\00", align 1
@THREAD_CALL_SIGNAL = common dso_local global i32 0, align 4
@THREAD_CALL_RUNNING = common dso_local global i32 0, align 4
@thread_call_zone = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @thread_call_free(%struct.TYPE_7__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  %6 = call i32 (...) @disable_ints_and_lock()
  store i32 %6, i32* %4, align 4
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 4
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %19, label %12

12:                                               ; preds = %1
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* @THREAD_CALL_RESCHEDULE, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %12, %1
  %20 = call i32 (...) @thread_call_unlock()
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @splx(i32 %21)
  %23 = load i32, i32* @FALSE, align 4
  store i32 %23, i32* %2, align 4
  br label %71

24:                                               ; preds = %12
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = add nsw i64 %27, -1
  store i64 %28, i64* %26, align 8
  store i64 %28, i64* %5, align 8
  %29 = load i64, i64* %5, align 8
  %30 = icmp slt i64 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %24
  %32 = load i64, i64* %5, align 8
  %33 = call i32 @panic(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i64 %32)
  br label %34

34:                                               ; preds = %31, %24
  %35 = load i32, i32* @THREAD_CALL_SIGNAL, align 4
  %36 = load i32, i32* @THREAD_CALL_RUNNING, align 4
  %37 = or i32 %35, %36
  %38 = load i32, i32* @THREAD_CALL_SIGNAL, align 4
  %39 = load i32, i32* @THREAD_CALL_RUNNING, align 4
  %40 = or i32 %38, %39
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = and i32 %40, %43
  %45 = icmp eq i32 %37, %44
  br i1 %45, label %46, label %50

46:                                               ; preds = %34
  %47 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %48 = load i32, i32* %4, align 4
  %49 = call i32 @thread_call_wait_once_locked(%struct.TYPE_7__* %47, i32 %48)
  br label %53

50:                                               ; preds = %34
  %51 = load i32, i32* %4, align 4
  %52 = call i32 @enable_ints_and_unlock(i32 %51)
  br label %53

53:                                               ; preds = %50, %46
  %54 = load i64, i64* %5, align 8
  %55 = icmp eq i64 %54, 0
  br i1 %55, label %56, label %69

56:                                               ; preds = %53
  %57 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %58 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %57, i32 0, i32 2
  %59 = load i64, i64* %58, align 8
  %60 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %61 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %60, i32 0, i32 3
  %62 = load i64, i64* %61, align 8
  %63 = icmp eq i64 %59, %62
  %64 = zext i1 %63 to i32
  %65 = call i32 @assert(i32 %64)
  %66 = load i32, i32* @thread_call_zone, align 4
  %67 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %68 = call i32 @zfree(i32 %66, %struct.TYPE_7__* %67)
  br label %69

69:                                               ; preds = %56, %53
  %70 = load i32, i32* @TRUE, align 4
  store i32 %70, i32* %2, align 4
  br label %71

71:                                               ; preds = %69, %19
  %72 = load i32, i32* %2, align 4
  ret i32 %72
}

declare dso_local i32 @disable_ints_and_lock(...) #1

declare dso_local i32 @thread_call_unlock(...) #1

declare dso_local i32 @splx(i32) #1

declare dso_local i32 @panic(i8*, i64) #1

declare dso_local i32 @thread_call_wait_once_locked(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @enable_ints_and_unlock(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @zfree(i32, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
